# layertwine

./: .gitignore  AGENTS.md  Cargo.toml  build.rs
.layertwine/: layertwine.example.toml
.stratum/: stratum.example.toml
benches/: PERFORMANCE_ANALYSIS.md  README.md  backup.rs  checkpoint.rs  core_types.rs  diff.rs  engine_edge.rs  export_benchmark_results.sh  export_helper.rs  extract_results.py  file_storage.rs  inverse.rs  merge.rs  run_all_benchmarks.sh  serialization.rs  storage.rs
benches/results/: README.md  benchmark_report.txt  benchmark_summary.json  performance_analysis.json
docs/: 设计方案.md
docs/api/: 01-API模块设计方案.md  02-二进制入口分析.md
docs/architecture/: 01-架构总览.md  02-核心数据模型.md  03-分层状态机.md  04-快照备份模块.md  05-检查点仓库与分支管理.md  06-Git同步与GC.md  07-Rust实现方案.md  08-参考库与实践.md
docs/history/: temp层调整.txt  命名.txt  设计思路.txt  设计方案.txt
docs/plan/: 00-任务总览.md  01-stratum-enhancement-specification.md  01-核心数据模型与存储层.md  02-git-sync-redesign.md  02-快照与增量引擎.md  03-architecture-improvement-plan.md  03-分层状态机.md  04-检查点仓库与分支管理.md  05-独立快照备份模块.md  06-Git同步与GC.md  07-CLI命令行接口.md  08-测试覆盖与边界加固.md  09-存储层重构与接口加固.md  10-DAG持久化与延迟加载设计.md
docs/reference/: 01-similar-diff引擎.md  02-jj-jujutsu架构.md  03-git-delta存储.md  04-immer不可变数据.md  05-复用分析.md  sqlite文件膨胀.md
docs/tests/: 01-集成测试方案.md  02-E2E测试方案.md  03-E2E测试实现方案.md  04-E2E测试使用指南.md  05-E2E测试实现总结.md  06-E2E测试编译问题清单.md  07-E2E测试执行问题总结.md  08-E2E测试修复计划.md  09-E2E测试修复总结.md  10-E2E测试修复最终报告.md
docs/user-guide/: 01-CLI使用指南.md  02-HTTP-API使用指南.md  03-gRPC-API参考.md
src/: config.rs  error.rs  lib.rs  main.rs  runtime.rs  test_utils.rs
src/api/: mod.rs  service.rs  types.rs
src/backup/: backup_repo.rs  backup_snapshot.rs  mod.rs
src/checkpoint/: branch.rs  checkpoint.rs  dag.rs  mod.rs  repo.rs  restore.rs  time_index.rs  transaction.rs  types.rs
src/cli/: commands.rs  mod.rs  output.rs
src/core/: delta.rs  delta_tests.rs  file_node.rs  file_node_tests.rs  layer.rs  layer_tests.rs  mod.rs  partition.rs  partition_tests.rs  snapshot.rs  snapshot_tests.rs  types.rs
src/engine/: diff.rs  inverse.rs  merge.rs  mod.rs
src/git_sync/: gc.rs  git_bridge.rs  mod.rs
src/layered/: agent.rs  api.rs  approval.rs  integrated.rs  manual.rs  mod.rs  staged.rs  test_helpers.rs  transition.rs  unified.rs
src/state_machine/: agent.rs  approval.rs  manual.rs  mod.rs  staged.rs  transition.rs
src/storage/: migrations.rs  mod.rs  repository.rs  sqlite_storage.rs
tests/: agent_ops.rs  approval_flow.rs  backup_integration.rs  backup_ops.rs  backup_physical_isolation.rs  backup_restore.rs  basic_ops.rs  basic_workflow.rs  branch_operations.rs  branch_ops.rs  checkpoint_integration.rs  common.rs  e2e_tests.rs  edge_cases_additional.rs  engine_integration.rs  engine_test.rs  error_handling.rs  git_sync_e2e.rs  grpc_integration.rs  http_integration.rs  integration.rs  layered_integration.rs  multi_agent.rs  storage_integration.rs  test_backup.rs  test_checkpoint.rs  test_concurrent.rs  test_core_storage.rs  test_e2e_agent_flow.rs  test_e2e_backup_restore.rs  test_e2e_basic.rs  test_e2e_branch_merge.rs  test_e2e_error_handling.rs  test_engine_storage.rs  test_full_workflow.rs  test_state_machine.rs  test_state_machine_agent.rs  test_state_machine_approval.rs
tests/common/: assertions.rs  e2e.rs  fixture.rs  helpers.rs  mod.rs  output.rs
tests/e2e/: approval_flow.rs  backup_restore.rs  basic_workflow.rs  branch_operations.rs  checkpoint_restore.rs  concurrency.rs  corruption_recovery.rs  edge_cases_additional.rs  (+9 more)
(+25 files in other folders)
