[package]
name = "stratum"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
blake3 = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = "0.8"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
similar = "3"
git2 = "0.21"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
