[package]
name = "stratum"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]

# API transport layers
cli = ["dep:clap"]
http = ["dep:axum", "dep:tower", "dep:tower-http", "dep:http", "dep:tokio"]
grpc = ["dep:tonic", "dep:prost", "dep:tokio"]
api-full = ["cli", "http", "grpc"]

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
blake3 = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = "0.8"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
similar = "3"
git2 = "0.21"

# CLI transport
clap = { version = "4", features = ["derive"], optional = true }

# HTTP transport
axum = { version = "0.8", features = ["macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"], optional = true }
http = { version = "1.1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# gRPC transport
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[[bin]]
name = "stratum"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3"
